# embarcas

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  main.cpp  tags  test.c
.cache/clangd/index/: display.c.2BD7AE245000A21A.idx  display.cpp.513E92B571A40330.idx  display.h.3BB49D032A620943.idx  display.hpp.952017F9D24951F8.idx  io.c.1553697E5FA26470.idx  io.cpp.A6F6A3C086DD5F81.idx  io.h.7F9C31C96B4C4AB9.idx  io.hpp.1EF8928028FA7606.idx  io_atmega328p.h.C5C004559EA28ABA.idx  io_atmega328p.hpp.18E458741445392E.idx  lcd.cpp.8BF1BE0322282F81.idx  lcd.hpp.5E182D75BAB87986.idx  main.c.6DA30494C05F4C9B.idx  main.cpp.4967ECB5DDAD6C8A.idx  rgb.c.E39C04170C1C523E.idx  rgb.cpp.1BE624060D8C5D40.idx  rgb.h.72693A676B24EB6E.idx  rgb.hpp.C7F0AF1341C0873C.idx  servo.c.A67BFE8DF287510A.idx  servo.cpp.111036068E332BAD.idx  servo.h.CAE83756F5E93020.idx  servo.hpp.57238D9D428C061D.idx  spi.cpp.79BB728B4B9ADD51.idx  (+6 more)
circuits/: digital_inputs.sim1  rgb_led.sim1  servo_move.sim1  seven_segments.sim1  simple_led.sim1
include/avr/: io_atmega328p.hpp
include/display/: display.hpp
include/io/: io.hpp
include/lcd/: lcd.hpp
include/rgb/: rgb.hpp
include/servo/: servo.hpp
include/spi/: spi.hpp
include/sr/: sr.hpp
io/: io.cpp  io.h
rgb/: rgb.cpp  rgb.h
servo/: servo.cpp  servo.h
shift_register/: shift_register.cpp  shift_register.h
src/: CMakeLists.txt  main.cpp
src/display/: display.cpp
src/io/: io.cpp
src/lcd/: lcd.cpp
src/rgb/: rgb.cpp
src/servo/: servo.cpp
src/spi/: spi.cpp
src/sr/: sr.cpp
ssd/: ssd.cpp  ssd.h
